Added Transform class

--- a/EntityFramework/BasicEnitityFramework.vcxproj
+++ b/EntityFramework/BasicEnitityFramework.vcxproj
@@ -154,6 +154,7 @@
     <ClCompile Include="Scene.cpp" />
     <ClCompile Include="SceneManager.cpp" />
     <ClCompile Include="Stopwatch.cpp" />
+    <ClCompile Include="Transform.cpp" />
     <ClCompile Include="WindowsApp.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -163,6 +164,7 @@
     <ClInclude Include="SceneManager.h" />
     <ClInclude Include="StdIncludes.h" />
     <ClInclude Include="Stopwatch.h" />
+    <ClInclude Include="Transform.h" />
     <ClInclude Include="WindowsApp.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
