Added Extensions for Entity manager and KLMList class container to StdIncludes

--- a/EntityFramework/BasicEnitityFramework.vcxproj
+++ b/EntityFramework/BasicEnitityFramework.vcxproj
@@ -164,6 +164,7 @@
     <ClInclude Include="Entity.h" />
     <ClInclude Include="EntityManager.h" />
     <ClInclude Include="InputSystem.h" />
+    <ClInclude Include="KLM_Framework.h" />
     <ClInclude Include="Scene.h" />
     <ClInclude Include="SceneManager.h" />
     <ClInclude Include="StdIncludes.h" />
