--- a/EntityFramework/BasicEnitityFramework.vcxproj.filters
+++ b/EntityFramework/BasicEnitityFramework.vcxproj.filters
@@ -113,5 +113,8 @@
     <ClInclude Include="Transform.h">
       <Filter>Header Files\Misc</Filter>
     </ClInclude>
+    <ClInclude Include="KLM_Framework.h">
+      <Filter>Header Files\Application</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
